day14-serviceMesh/priority-levels/front-envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    name: listener_http
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: webcluster1
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: webcluster1
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: webcluster1
      policy:
        # 超配因子 1.5 注意超配因子也要*100
        # webservice1共有3个节点 当1个节点宕机时
        # 健康节点比例为67% 67% * 1.5 = 100.5% > 100%
        # 因此不会发生流量迁移
        overprovisioning_factor: 150
      endpoints:
      - locality:
          region: cn-north-1
        # 高优先级
        priority: 0
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # 使用webservice1组
                address: webservice1
                port_value: 80
      - locality:
          region: cn-north-2
        # 低优先级
        priority: 1
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # 使用webservice2组
                address: webservice2
                port_value: 80
    health_checks:
    - timeout: 5s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 1
      http_health_check:
        path: /livez
        expected_statuses:
          start: 200
          end: 399
    common_lb_config:
      # 恐慌阈值 百分比数值 默认50%
      healthy_panic_threshold:
        # 此处改个49 仅为演示
        value: 49
